--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,12 @@
         <exec.mainClass>com.criollo.machmillenium.MachMillenium</exec.mainClass>
     </properties>
     <dependencies>
-<dependency>
-  <groupId>io.github.vincenzopalazzo</groupId>
-  <artifactId>material-ui-swing</artifactId>
-  <version>1.1.2</version>
-</dependency>
+        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-forms -->
+        <dependency>
+            <groupId>com.jgoodies</groupId>
+            <artifactId>jgoodies-forms</artifactId>
+            <version>1.9.0</version>
+        </dependency>
 
     </dependencies>
 </project>
