agregando jasper reports

--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,10 @@
             <artifactId>jfreechart</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>7.0.1</version>
+        </dependency>
     </dependencies>
 </project>
